--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
